Fixed video issue on mobile

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -252,7 +252,7 @@ html {
     flex-direction: column;
     padding: 0;
     height: 1040px;
-    margin: 1px 70px;
+
   }
 
   .work-card {
